# fpermvw

./: .gitignore  Cargo.toml  readme.md
src/: cli.rs  main.rs  permissions.rs  utils.rs
