[package]
name = "fpermvw"
version = "0.1.0"
authors = ["daniel herslof <d_herslof@hotmail.com>"]
description = "File permission viewer"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.*"
failure = "0.1.7"
prettytable-rs = "^0.8"
